Make all portfolio pictures allow pop up view and added button to redirct to either the live preview or the source code from github.

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,14 @@ nav{
 	background-color: #4880f2;
 	color: #ffffff;
 }
+
+.centerBtn{
+	padding-top: 5px;
+	margin: auto;
+	width: 50%;
+	
+}
+
 /* carousel */
 .jk-carousel {
   height: 100%;
