--- a/js/views/portfolio.html
+++ b/js/views/portfolio.html
@@ -4,34 +4,33 @@
 
 <div class="nav-div" class="container ">
     <nav class="port-nav" >
-	   <!-- Maybe add a script and set var to {{type}}?
-	   <a class="nav-link" ng-repeat="type in types" ng-click="typeFilter.type='{{type}}'">{{type}}</a> -->
-	    <a class="nav-link" ng-click="typeFilter.type=''"> All</a>
+    	<!-- Todo: Create new filter (link) and make a current filter scope to filter by current filter in ng-repeat -->
+	   <a class="nav-link" ng-click="typeFilter.type=''"> All</a>
 	   <a class="nav-link" ng-click="typeFilter.type='Java'"> Java</a>
 	   <a class="nav-link" ng-click="typeFilter.type='Angular'"> Angular</a>
-		<a class="nav-link" ng-click="typeFilter.type='c'"> C/C++</a>
+	   <a class="nav-link" ng-click="typeFilter.type='c'"> C/C++</a>
+
 	</nav>      
 </div>
 
 </br>
 <div>
 	<div class="portfolio-container" >
-		<div class="item" ng-repeat="image in images | filter:typeFilter" >
+		<div class="item" ng-repeat="image in images | filter:typeFilter " >
 			<p>{{image.title | uppercase}}</p>
 			<p>{{image.description}}</p>
 			<p> {{image.type }} </br></p>
-			<div ng-if="image.url == 'No link'">
-				<p>{{image.url}} </p>
-				<img class="preview" ng-click="togglePopUp(); setSelectedImage(image)" ng-src="{{image.icon}}">				
+			<img class="preview" ng-click="togglePopUp(); setSelectedImage(image)" ng-src="{{image.icon}}">	
+			<br>	
 			
+			<div ng-if="!image.link" class="centerBtn">	
+				<a ng-href="{{image.url}}" target="_blank"> <button>View source</button></a>
+			</div>	
+			<div ng-if="image.link"  class="centerBtn">
+				<a ng-href="{{image.url}}" target="_blank"> <button>Live preview</button></a>
 			</div>
-			
-			<div ng-if="image.url != 'No link'">
-				<p> Click below to view project! </p>
-				<a ng-href="{{image.url}}" target="_blank"><img class="preview" ng-src="{{image.icon}}">	</a>
-			</div>
-			
-					<!--  This is the hidden element which will pop up when user clicks a non-linked project -->
+		
+			<!--  This is the hidden element which will pop up when user clicks a non-linked project -->
 			<div class="modal" ng-show="popUp">
 				<span class="close" ng-click="togglePopUp()">X</span>
 				 <img class="modal-content"  ng-src="{{selectedImage.icon}}">
