--- a/js/views/portfolio.html
+++ b/js/views/portfolio.html
@@ -2,15 +2,15 @@
 <h2> {{portfolio}} </h2>
 
 
-<div class="nav-div" class="container ">
-    <nav class="port-nav" >
+<div class="port-nav" class="container ">
+
     	<!-- Todo: Create new filter (link) and make a current filter scope to filter by current filter in ng-repeat -->
 	   <a class="nav-link" ng-click="typeFilter.type=''"> All</a>
 	   <a class="nav-link" ng-click="typeFilter.type='Java'"> Java</a>
 	   <a class="nav-link" ng-click="typeFilter.type='Angular'"> Angular</a>
 	   <a class="nav-link" ng-click="typeFilter.type='c'"> C/C++</a>
 
-	</nav>      
+   
 </div>
 
 </br>
