--- a/js/views/home.html
+++ b/js/views/home.html
@@ -1,16 +1,7 @@
 
 <h2> Home</h2>
 </br>
-<div class="background_img">
-    <md-card layout="column" layout-align="center center" style="padding-bottom: 10px" class="background_img">
-      <h3>Basic Carousel setup</h3>
-      <jk-carousel
-        data="dataArray"
-        item-template-url="'js/views/item-template.html'"
-        max-width="800" 
-        max-height="500" >
-        </jk-carousel>
-    </md-card>
+<div>
     <md-card layout="column" layout-align="center center" style="padding-bottom: 10px" class="background_img">
       <h3>AutoSlide Carousel</h3>
       <jk-carousel
