--- a/js/views/home.html
+++ b/js/views/home.html
@@ -6,7 +6,7 @@
       <h3>AutoSlide Carousel</h3>
       <jk-carousel
         data="dataArray"
-        item-template-url="'js/views/item-template.html'"
+        item-template-url="'js/directives/carousel-template.html'"
         max-width="800" 
         max-height="500"
         auto-slide="true"
