Completed Resume template and updated 50% of resume data.

--- a/js/views/resume.html
+++ b/js/views/resume.html
@@ -1,27 +1,181 @@
-<body>
+<link href="css/resume.css" rel="stylesheet" />
 
-	<div>
+<div class="resume">
 
-		<div>
-		
-			<div>
-			   <div >
-			      <div>
-			         <h1>Ryan Shoaf</h1>
-			         <h2>Computer Engineer</h2>
-			      </div>
-			
-			      <div >
-			         <div>
-			            <h3>300 Regina St. North,</h3>
-			            <h3>Waterloo, ON, N2J 3C1</h3>
-			            <h3>(416) 200-4498</h3>
-			            <h3><a href="mailto:rshoaf@knights.ucf.edu">rshoaf@knights.ucf.edu</a></h3>
-			            <h3><a href="http://website.com/">www.website.com</a></h3>
-			         </div>
-			      </div>
+	<div class="resume-header">
+		<div class="first">
+			<h1>Ryan Shoaf</h1>
+			<h2>Computer Engineer</h2>
+		</div>
+	
+		<div class="contact-info">
+			<h3>300 Regina St. North,</h3>
+			<h3>Waterloo, ON, N2J 3C1</h3>
+			<h3>(321) 388-1774</h3>
+			<h3><a href="mailto:rshoaf@knights.ucf.edu">rshoaf@knights.ucf.edu</a></h3>
+			<h3><a href="http://ryan-website.s3-website.us-east-2.amazonaws.com/#/">Website</a></h3>
+		</div>
+	</div>
+
+	<div class="resume-body">
+
+		<div class="b-section">
+   			<div class="first">
+      			<h2>Skills</h2>
+   			</div>
+   			<div>
+	      		<div class="skill">
+	         		<h2><strong>Communication</strong></h2>
+	         		<p>Facilitated communication throughout team by organizing regular meetings</p>
+	      		</div>
+	
+	      		<div class="skill">
+	        		<h2><strong>Detail Oriented</strong></h2>
+	         		<p>Continued focus on all project details to ensure the project meets all criteria, to the last detail</p>
+	     		</div>
+	
+	      		<div class="skill">
+	         		<h2><strong>Organization</strong></h2>
+	         		<p>Organization is a fundamental requirement for any project to increase efficiency</p>     
+		 		</div>
+   			</div>
+   
+      		<div>
+      			<div class="skill">
+         			<h2><strong>Driven</strong></h2>
+         			<p>Utilize current skills to excel in new positions or challenges while absorbing new knowledge</p>
+      			</div>
+
+	      		<div class="skill">
+	         		<h2><strong>Teamwork</strong></h2>
+	         		<p>Worked in multiple teams both as a leader and as a subordinate, which is important for any large scale projects</p>
+	      		</div>
+	
+	      		<div class="skill">
+	         		<h2><strong>Agile/Scrum</strong></h2>
+	         		<p>Comfortable working in a fast-paced, agile environment with frequent releases and high quality</p>
+	      		</div>
+   			</div>
+   
+		</div>
+
+		<div class="b-section">
+			   <div class="first">
+			      <h2>Experience</h2>
 			   </div>
+			   <div>
+			      <ul class="skill">
+					<h2><strong>Systems</strong></h2>
+			         	<li>Windows</li>
+			         	<li>Linux</li>
+			        	 <li class="last">Mac</li>
+			      </ul>		
+			      <ul class="skill">
+				  		<h2><strong>Languages</strong></h2>
+			       	  	<li>C/C++</li>
+			       	 	<li>AngularJS, jQuery</li>
+			         	<li>Ruby, Java </li>
+			        	<li class="last">CSS, HTML</li>
+			      </ul>			
+			      <ul class="skill">
+				  <h2><strong>Applications</strong></h2>
+			         	<li>Git, AWS, Eclipse</li>
+			         	<li>Microsoft Office, Excel</li>
+			         	<li class="last">Outlook</li>
+			      </ul>
+			   </div>
+		</div>
+
+		<div class="b-section">
+		   <div class="first">
+		      <h2>Education</h2>
+		   </div>		
+		   <div>   
+		      <div class="education">
+		         <h2>Computer Engineering Bachelors</h2>
+		         <h3>University of Central Florida, 3.435 GPA</h3>
+		         <h4>2010 - 2013</h4>			
+				<p class="subhead"><strong>Senior Design Project</strong></p>
+			         <ul>
+			            <li><a href="http://www.eecs.ucf.edu/seniordesign/fa2012sp2013/g02/">Senior design project</a> is a real time, autonomous, target-tracking system.</li>
+						<li>We worked in a group of 4 to develop an autonomous optical guidance system mounted on an airplane.</li>
+			            <li>The system was developed completely from scratch and required to capture a raw image from a camera, which was transferred to memory. Then, the target, based 
+			            	on color, is selected from the image and sends the coordinates to the flight controller.</li>
+			         </ul>
+				<p class="subhead"><strong>Enterprise Resource Planning Project</strong></p>
+			         <ul>
+						<li></li>
+					</ul>	
+				<p class="subhead"><strong>Programming projects</strong></p>
+			         <ul>
+			         	<li>Java:</li>
+			         	<li>C/C++:</li>
+			         	<li>Android:</li>
+			         </ul>		
+		  	  </div>
+		  	   <div class="education">
+		         <h2>Waterloo University</h2>
+		         <h3>University of Waterloo</h3>
+		         <h4>2014 - 2017</h4>			
+				<p class="subhead"><strong>Tutoring/classes</strong></p>
+			         <ul>
+			         	<li></li>
+		         	</ul>	
+		  	  </div>
+		  	   <div class="education last">
+		         <h2>Independent Studies</h2>
+		         <h3>CodeAcademy, Website, AWS</h3>
+		         <h4>2017 - current</h4>			
+				<p class="subhead"><strong>CodeAcademy</strong></p>
+			         <ul>
+			         	<li>AngularJS</li>
+			         </ul>	
+		  	  </div>
+			</div>
+		</div> 
+
+		<div class="b-section">
+		   <div class="first">
+		      <h2>Work Experience</h2>
+		   </div>
+		   <div>		 
+		      <div class="job last">
+		         <h2>Earnest Products, Inc</h2>
+		         <h3>Sanford, Florida</h3>
+		         <h4>August 2005 - August 2014</h4>
+		         <p class="subhead"><strong>Project Manager(2013-2014)</strong></p>
+		         <ul>
+		         	<li></li>
+			 	 </ul>
+			 	 <p class="subhead"><strong>CNC Programmer(2011-2013)</strong></p>
+		         <ul>
+		         	<li></li>
+			 	 </ul>
+			 	 <p class="subhead"><strong>Machine Operator(2005-2011)</strong></p>
+		         <ul>
+		         	<li></li>
+			 	 </ul>
+				 
+		      </div> 	
+		   </div>
+		</div>
+		
+		<div class="b-section last">
+		   	<div class="first">
+		      <h2>Hobbies and Interests</h2>
+		   	</div>
+		    <div class="job last">
+		         <p class="subhead"></p>
+		         <ul>
+		         	<li>Rock climbing</li>
+		         	<li>Learning</li>
+		         	<li>Video games</li>
+				 </ul>
 			</div>
 		</div>
 	</div>
-</body>
+</div>
+
+
+
+
