--- a/js/views/resume.html
+++ b/js/views/resume.html
@@ -9,8 +9,6 @@
 		</div>
 	
 		<div class="contact-info">
-			<h3>300 Regina St. North,</h3>
-			<h3>Waterloo, ON, N2J 3C1</h3>
 			<h3>(321) 388-1774</h3>
 			<h3><a href="mailto:rshoaf@knights.ucf.edu">rshoaf@knights.ucf.edu</a></h3>
 			<h3><a href="http://ryan-website.s3-website.us-east-2.amazonaws.com/#/">Website</a></h3>
@@ -98,38 +96,71 @@
 				<p class="subhead"><strong>Senior Design Project</strong></p>
 			         <ul>
 			            <li><a href="http://www.eecs.ucf.edu/seniordesign/fa2012sp2013/g02/">Senior design project</a> is a real time, autonomous, target-tracking system.</li>
-						<li>We worked in a group of 4 to develop an autonomous optical guidance system mounted on an airplane.</li>
+						<li>Worked in a group of 4 to develop an autonomous optical guidance system mounted on an airplane.</li>
 			            <li>The system was developed completely from scratch and required to capture a raw image from a camera, which was transferred to memory. Then, the target, based 
 			            	on color, is selected from the image and sends the coordinates to the flight controller.</li>
 			         </ul>
 				<p class="subhead"><strong>Enterprise Resource Planning Project</strong></p>
 			         <ul>
-						<li></li>
+						<li>Designed and implemented a MySQL database to mimic basic Enterprise Resource Planning (ERP).</li>
+						<li>Created database schema, table and population scripts, as well as DML and DDL queries such as update, insert, and select</li>
 					</ul>	
 				<p class="subhead"><strong>Programming projects</strong></p>
 			         <ul>
-			         	<li>Java:</li>
-			         	<li>C/C++:</li>
-			         	<li>Android:</li>
+			         	<li><span class="emphasis">Java:</span> Implemented computer theory concepts such as CYK algorithm, Turing Machine, and multi-way search trees.
+			         			  Also completed websites using servlets, JSP, and PHP which were hosted through Apache Tomcat with access to mySQL database.</li>
+			         	<li><span class="emphasis">C/C++:</span> Implemented AVL trees, triple pointer programs, and recursive functions (COP 3502C)</li>
+			         	<li><span class="emphasis">Verilog:</span> Developed a single-cycle data path to simulate a MIPS processor.</li>
+			         	<li><span class="emphasis">Android:</span> Worked in a group of 3 to create an Android application which used Twitter and Facebook APIs to retrieve and display data. </li>
 			         </ul>		
 		  	  </div>
 		  	   <div class="education">
 		         <h2>Waterloo University</h2>
 		         <h3>University of Waterloo</h3>
 		         <h4>2014 - 2017</h4>			
-				<p class="subhead"><strong>Tutoring/classes</strong></p>
+				<p class="subhead"><strong>Courses</strong></p>
 			         <ul>
-			         	<li></li>
-		         	</ul>	
+			         	<li><span class="emphasis">Advanced Digital Communications (ECE 611)</span>:</br>
+			         	Covered entropy, mutal information, rate distortion, source coding, interference, modulation, convolutional codes, and decoding algorithms.</li>
+		         	</ul>
+		            <ul>
+			         	<li><span class="emphasis">Computer Network Security (ECE 628)</span>:</br>
+			         	Covered cryptography, cryptanalysis, and communication security.</li>
+		         	</ul> 	
+		         	<p class="subhead"><strong>Tutoring (third year)</strong></p>
+		         	<ul>
+			         	<li><span class="emphasis">CS 350: Operation Systems</span> which involved modifying Harvard OS/161 by implementing synchronization, system calls (fork, getpid, waitpid, _exit, execv, and arg passing), and finally a virtual memory system.</li>
+			         	<li><span class="emphasis">CS 348: Database Management</span> which discussed principles of relational database management system, data modeling process, using ODBC and JDBC to interact with databases.</li>
+			         	<li><span class="emphasis">CS 343: Concurrent and Parallel</span> programming which introduces topics such as exceptions, coroutines, atomic operations, critical sections, mutual exclusion, semaphores, high-level concurrency, deadlock, interprocess communication, process structuring, and shared memory.</li>
+		         	</ul>
 		  	  </div>
+		  	  
 		  	   <div class="education last">
 		         <h2>Independent Studies</h2>
 		         <h3>CodeAcademy, Website, AWS</h3>
-		         <h4>2017 - current</h4>			
-				<p class="subhead"><strong>CodeAcademy</strong></p>
+		         <h4>2017 - current</h4>		
+		         <p class="subhead"><strong>Website</strong></p>
 			         <ul>
-			         	<li>AngularJS</li>
+			         	<li>Applied techniques to create my website and reinforce knowledge.</br>
+			         		Used ngMaterials, directives, filters, and routing.</br>
+			         		Portfolio shows a collection of projects which can be filtered by type.</li>
 			         </ul>	
+		  	  	
+				 <p class="subhead"><strong>CodeAcademy</strong></p>
+			         <ul>
+			         	<li><span class="emphasis">AngularJS</span>: Learned how to use directives, services, and routing. I completed multiple projects and displayed a few in my website portfolio.</li>
+			         	<li><span class="emphasis">jQuery</span>: Completed course which involved using functions, Dynamic HTML, Events, Effects, and projects which required a combination of techniques.</li>
+			         	<li><span class="emphasis">Ruby</span>: Covered control flow, looping, arrays, hashes, blocks, and sorting.</br>
+			         		Finished course in Ruby on Rails and tested it to host a website from AWS.</li>
+			         </ul>	
+			     <p class="subhead"><strong>AWS</strong></p>
+			         <ul>
+			         	<li>While looking for a hosting provider, I discovered AWS which provides an abundance of features in which I explored the EC2, S3, IAM, and RDS.</li>
+			         	<li>I started testing dynamic website through EC2 using both Ruby on Rails and Apache Tomcat. I ended up using a static hosting through S3.</li>
+			         	<li>EC2 dynamic hosting let me explore and learn multiple other features which will be useful when I explore dynamic websites.</li>
+			         </ul>	
+			   </div>
+		  	  
 		  	  </div>
 			</div>
 		</div> 
@@ -145,15 +176,20 @@
 		         <h4>August 2005 - August 2014</h4>
 		         <p class="subhead"><strong>Project Manager(2013-2014)</strong></p>
 		         <ul>
-		         	<li></li>
+		         	<li>Monitored the construction and integration of three automated machines.</li>
+		         	<li>Integrated the three machines into our manufacturing process and connected them to our database.</li>
+		         	<li>Applied troubleshooting skills to solve mechanical issues.</li>
+		         	<li>Developed an efficient system to reduce set-up time by half and increase productivity flow.</li>
 			 	 </ul>
 			 	 <p class="subhead"><strong>CNC Programmer(2011-2013)</strong></p>
 		         <ul>
-		         	<li></li>
+		         	<li>Transitioned into the office to apply my hands on knowledge by programming the CNC machines after learning the machines and processes.</li>
+		         	<li>Implemented a Visual Basic and C++ program to maintain a searchable database of tools and records which increased productivity by reducing manual search time.</li>
 			 	 </ul>
 			 	 <p class="subhead"><strong>Machine Operator(2005-2011)</strong></p>
 		         <ul>
-		         	<li></li>
+		         	<li>Developed an understanding of the thought process behind sheet metal manufacturing by learning and working in different areas.</li>
+		         	<li>Started at hardware insertion, then transitioned to run two sheet metal punches,then learned three different brake presses.</li>
 			 	 </ul>
 				 
 		      </div> 	
@@ -167,9 +203,12 @@
 		    <div class="job last">
 		         <p class="subhead"></p>
 		         <ul>
-		         	<li>Rock climbing</li>
-		         	<li>Learning</li>
-		         	<li>Video games</li>
+		         	<li>Rock climbing:</br>
+		         	I have been rock climbing for the last 5 years. I primarily go indoor climbing, but I have done outdoor top rope climbing at Rattlesnake Point in Ontario, Canada.</li>
+		         	<li>Learning:</br>
+		         	I have always had an intense desire for knowledge since I was a child. I love figuring out how something works and learning new concepts or theories.</li>
+		         	<li>Video games: </br>
+		         	I can never resist a good video game to unwind and relax, although, if I'm in the mood, I love competitive or challenging games.</li>
 				 </ul>
 			</div>
 		</div>
