--- a/js/views/home.html
+++ b/js/views/home.html
@@ -2,7 +2,7 @@
 <h2> Home</h2>
 </br>
 <div>
-    <md-card layout="column" layout-align="center center" style="padding-bottom: 10px" class="background_img">
+    <md-card layout="column" layout-align="center center" style="padding-bottom: 10px; box-shadow: none;">
       <h3>AutoSlide Carousel</h3>
       <jk-carousel
         data="dataArray"
