--- a/js/views/aboutMe.html
+++ b/js/views/aboutMe.html
@@ -1,12 +1,10 @@
 
-<h2> {{aboutMe}}</h2>
-</br>
 <div>
-    <h3>Things I like to do!</h3>
+    <h3>My hobbies and interests:</h3>
     </br> 
 
 		<test ng-repeat="activity in activities" info="activity"></test>
-	<h3>My personal accomplishments</h3>
+	<h3>My personal accomplishments:</h3>
 		<test ng-repeat="accomplishment in accomplishments" info="accomplishment"></test>
 
 </div>
