--- a/js/views/resume.html
+++ b/js/views/resume.html
@@ -12,6 +12,8 @@
 			<h3>(321) 388-1774</h3>
 			<h3><a href="mailto:rshoaf@knights.ucf.edu">rshoaf@knights.ucf.edu</a></h3>
 			<h3><a href="http://ryan-website.s3-website.us-east-2.amazonaws.com/#/">Website</a></h3>
+			<h3><a href="https://www.linkedin.com/in/ryan-shoaf-b7299b123/">LinkedIn</a></h3>
+			<h3><a href="https://github.com/dragonguard7">Git</a></h3>
 		</div>
 	</div>
 
@@ -78,7 +80,7 @@
 			      <ul class="skill">
 				  <h2><strong>Applications</strong></h2>
 			         	<li>Git, AWS, Eclipse</li>
-			         	<li>Microsoft Office, Excel</li>
+			         	<li>Microsoft Office</li>
 			         	<li class="last">Outlook</li>
 			      </ul>
 			   </div>
@@ -115,8 +117,7 @@
 			         </ul>		
 		  	  </div>
 		  	   <div class="education">
-		         <h2>Waterloo University</h2>
-		         <h3>University of Waterloo</h3>
+		         <h2>University of Waterloo</h2>
 		         <h4>2014 - 2017</h4>			
 				<p class="subhead"><strong>Courses</strong></p>
 			         <ul>
@@ -137,7 +138,7 @@
 		  	  
 		  	   <div class="education last">
 		         <h2>Independent Studies</h2>
-		         <h3>CodeAcademy, Website, AWS</h3>
+		         <h3>Website, Codecademy, AWS</h3>
 		         <h4>2017 - current</h4>		
 		         <p class="subhead"><strong>Website</strong></p>
 			         <ul>
@@ -146,14 +147,14 @@
 			         		Portfolio shows a collection of projects which can be filtered by type.</li>
 			         </ul>	
 		  	  	
-				 <p class="subhead"><strong>CodeAcademy</strong></p>
+				 <p class="subhead"><strong>Codecademy</strong></p>
 			         <ul>
 			         	<li><span class="emphasis">AngularJS</span>: Learned how to use directives, services, and routing. I completed multiple projects and displayed a few in my website portfolio.</li>
 			         	<li><span class="emphasis">jQuery</span>: Completed course which involved using functions, Dynamic HTML, Events, Effects, and projects which required a combination of techniques.</li>
 			         	<li><span class="emphasis">Ruby</span>: Covered control flow, looping, arrays, hashes, blocks, and sorting.</br>
 			         		Finished course in Ruby on Rails and tested it to host a website from AWS.</li>
 			         </ul>	
-			     <p class="subhead"><strong>AWS</strong></p>
+			     <p class="subhead"><strong>AWS (Amazon Web Services)</strong></p>
 			         <ul>
 			         	<li>While looking for a hosting provider, I discovered AWS which provides an abundance of features in which I explored the EC2, S3, IAM, and RDS.</li>
 			         	<li>I started testing dynamic website through EC2 using both Ruby on Rails and Apache Tomcat. I ended up using a static hosting through S3.</li>
@@ -173,7 +174,7 @@
 		      <div class="job last">
 		         <h2>Earnest Products, Inc</h2>
 		         <h3>Sanford, Florida</h3>
-		         <h4>August 2005 - August 2014</h4>
+		         <h4>2005 - 2014</h4>
 		         <p class="subhead"><strong>Project Manager(2013-2014)</strong></p>
 		         <ul>
 		         	<li>Monitored the construction and integration of three automated machines.</li>
@@ -189,7 +190,7 @@
 			 	 <p class="subhead"><strong>Machine Operator(2005-2011)</strong></p>
 		         <ul>
 		         	<li>Developed an understanding of the thought process behind sheet metal manufacturing by learning and working in different areas.</li>
-		         	<li>Started at hardware insertion, then transitioned to run two sheet metal punches,then learned three different brake presses.</li>
+		         	<li>Started at hardware insertion, then transitioned to run two sheet metal punches, then learned three different brake presses.</li>
 			 	 </ul>
 				 
 		      </div> 	
